--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: fred
-Type: fred
+Type: Package
 Title: Federal Reserve Economic Data
 Version: 0.1
 Date: 2014-04-21
 Author: John Laing
 Maintainer: John Laing <john.laing@gmail.com>
 Description: Provides an interface to the Federal Reserve Economic Database. The database is maintained by the St. Louis Fed, while this package is merely a wrapper around the public API. Compulsory disclaimer: this product uses the FRED API but is not endorsed or certified by the Federal Reserve Bank of St. Louis.
-License: MIT
-Depends: XML
+License: MIT + file LICENSE
+Suggests: XML
